--- a/app/views/users/_user.html.erb
+++ b/app/views/users/_user.html.erb
@@ -3,7 +3,7 @@
 </td>
 	<%= form_for(user) do |f| %>
 		<%= f.select(:role, User.roles.keys.map {|role| [role.titleize, role]}) %>
-		<%= f.sumbit 'Change Role', :class => 'button-xs' %>
+		<%= f.submit 'Change Role', :class => 'button-xs' %>
 	<% end %>
 </td>
 <td>
